rear camera test

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>  
   <body>
-    <h1>Multibox object detection</h1>
+    <h1>multibox object detection test1</h1>
 
     <p>Waiting for model to load</p>
     
